test/kubernetes/e2e/features/agentgateway/aibackend/testdata/setup.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ai-gateway
spec:
  gatewayClassName: agentgateway
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    name: http
    port: 8080
    protocol: HTTP
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: Backend
metadata:
  name: openai
spec:
  type: AI
  ai:
    llm:
      openai:
        model: gpt-4o-mini
        authToken:
          kind: Inline
          inline: openai-key
      host: 172.17.0.1
      port: 9234
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: Backend
metadata:
  name: anthropic
spec:
  type: AI
  ai:
    llm:
      anthropic:
        model: claude-sonnet-4@20250514
        authToken:
          kind: Inline
          inline: anthropic-key
      host: 172.17.0.1
      port: 9234      
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llm
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: ai-gateway
  rules:
  - name: openai
    backendRefs:
    - group: gateway.kgateway.dev
      kind: Backend
      name: openai
    matches:
    - path:
        type: PathPrefix
        value: /v1/chat/completions
  - name: anthropic-0
    backendRefs:
    - group: gateway.kgateway.dev
      kind: Backend
      name: anthropic
    matches:
    - path:
        type: PathPrefix
        value: /v1/messages
      headers:
      - type: Exact
        name: x-direction
        value: request        
  - name: anthropic-1
    backendRefs:
    - group: gateway.kgateway.dev
      kind: Backend
      name: anthropic
    matches:
    - path:
        type: PathPrefix
        value: /v1/messages
      headers:
      - type: Exact
        name: x-direction
        value: response          
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: openai-prompt-guard
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: llm
    sectionName: openai
  ai:
    promptGuard:
      request:
        customResponse:
          message: "request rejected"
          statusCode: 403
        regex:
          action: REJECT
          matches:
          - name: credit-card
            pattern: "credit card"
      response:
        regex:
          action: REJECT
          builtins:
            - SSN
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: anthropic-request-guardrails
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: llm
    sectionName: anthropic-0
  ai:
    promptGuard:
      request:
        webhook:
          host:
            host: ai-guardrails-webhook.default
            port: 8000
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: anthropic-response-guardrails
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: llm
    sectionName: anthropic-1
  ai:
    promptGuard:
      response:
        webhook:
          host:
            host: ai-guardrails-webhook.default
            port: 8000
